--- a/src/styles/antd-overrides/input.scss
+++ b/src/styles/antd-overrides/input.scss
@@ -222,6 +222,7 @@ input:-webkit-autofill-selected {
   .language-selector {
     margin-top: 48px;
     padding-left: 15px;
+    margin-top: 46px;
   }
 }
 
